2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Add support for GDK_Home
	  and GDK_End for changing the volume to the maximum/minimum
	  level.

2008-06-21	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/Makefile.am, 
	  libxfce4mixer/xfce-mixer-card-combo.{c,h},
	  libxfce4mixer/xfce-mixer-track-combo.{c,h}, 
	  libxfce4mixer/xfce-mixer-utilities.{c,h}:
	  Add subclasses of GtkComboBox for unified selection of 
	  sound cards and mixer tracks. Add convenience functions for
	  getting a list of available sound cards and getting sound
	  cards by name. 
	* panel-plugin/Makefile.am,
	  panel-plugin/xfce-mixer-plugin.{c,h},
	  panel-plugin/xfce-plugin-dialog.{c,h},
	  panel-plugin/xfce-volume-button.{c,h}:
	  Implement the properties dialog of the plugin. By now it 
	  makes it possible to select which sound card and mixer track
	  to use. Also connect the plugin to GStreamer, so it actually 
	  does something. Add support for reading/writing the plugin 
	  configuration to the rc file. The volume button itself has
	  some focus grabbing problems: sometimes other windows don't
	  receive the focus even when the pointer leaves the button.
	* xfce4-mixer/xfce-mixer-window.c: Move the _load_soundcards 
	  method to the libxfce4mixer. Make use of the new 
	  XfceMixerCardCombo in XfceMixerWindow.

2008-06-19	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-mixer-plugin.c: Try to start "xfce4-mixer" 
	  when the plugin button is clicked.

2008-06-19	Jannis Pohlmann <jannis@xfce.org>

	* Huge code reorganization: Split the mixer into three parts: 
	  libxfce4mixer, xfce4-mixer and the panel plugin. libxfce4mixer
	  contains everything that's needed by both, the mixer and the 
	  plugin.
	* panel-plugin/: This will become a minimalistic, keyboard and 
	  scroll-wheel orientated plugin with no volume popup slider or
	  whatsoever. I'll have to add this later. Still missing: config
	  dialog and the connection to the soundcard.